# rooftop_sampling

./: .gitignore  README.md  add_brgy_to_rooftop.ipynb  calc_pct_roofs_not_on_road.ipynb  clean_barangay_data.ipynb  clean_barangay_data_alt.ipynb  demo_jharkhand.ipynb  demo_philippines.ipynb  demo_tfgh.ipynb  gen_hpls_sample.ipynb  gen_rhr_sim_sample.ipynb  pyproject.toml
EA_IFA/: utils.py
IFS/: 01_get_rooftops.ipynb  boundary_quality_checks.ipynb  load_match_sample.ipynb  load_match_sample_v3_cleaned.ipynb  load_match_sample_v4_leftouts.ipynb  load_match_sample_v5_new_mapsolve_shapes.ipynb  load_match_sample_v7_assam_leftover.ipynb  load_match_sample_v8_replacements.ipynb  sample_for_pilot_locations.ipynb  sample_for_pilot_locations_v1.ipynb  sample_for_pilot_locations_v2.ipynb  sample_for_pilot_locations_v3.ipynb
Panel/: boundary_quality_checks training.ipynb  boundary_quality_checks.ipynb  boundary_quality_checks_replacements_v1.ipynb  boundary_quality_checks_training.ipynb  boundary_quality_checks_training_phase_1.ipynb  boundary_quality_checks_v2_mumbai_main.ipynb  boundary_quality_checks_v2_mumbai_replacements.ipynb  load_match_sample_replacements_v2_mumbai_main.ipynb  load_match_sample_replacements_v2_mumbai_replacements.ipynb  load_match_sample_training.ipynb  load_match_sample_training_phase_1 (wards).ipynb  load_match_sample_training_phase_2 (custom shapes).ipynb  load_match_sample_training_phase_3 (custom shapes).ipynb  load_match_sample_v1.ipynb  utils.py
kilifi_sampling/: 01_load_data.ipynb  02_sample_rooftops_per_subcounty.ipynb  03_make_outputs.ipynb  (+1 more)
(+8 files in other folders)
